test/Harper/Tests/Bad/issue6_unassFlds.har
value List a = {
  variant Empty = { };
  
  variant NonEmpty = {
    data = {
      head :: a;
      tail :: List a;
    }
  };
};

cons x xs = val NonEmpty { head = x, tail = xs };

empty = val Empty {};

main = {
  list = val NonEmpty { head = 5 };
  return list;
};